--- a/Sparc2/Sparc2/Catalog/Catalog.razor.scss
+++ b/Sparc2/Sparc2/Catalog/Catalog.razor.scss
@@ -138,7 +138,7 @@
             .spacer {
                 display: block;
                 width: 100%;
-                padding-bottom: 40vh;
+                padding-bottom: 320px;
             }
 
             .product-card {
@@ -151,7 +151,7 @@
 
         .right {
             width: calc(100% - 16px);
-            height: 40vh;
+            height: 320px;
             padding: 0;
             padding-bottom: 16px;
             position: fixed;
