--- a/Sparc2/Sparc2/Catalog/ProductPage.razor.css
+++ b/Sparc2/Sparc2/Catalog/ProductPage.razor.css
@@ -211,11 +211,11 @@
   .product-page .left .spacer {
     display: block;
     width: 100%;
-    padding-bottom: 40vh;
+    padding-bottom: 320px;
   }
   .product-page .right {
     width: calc(100% - 32px);
-    height: 40vh;
+    height: 320px;
     background: var(--yellow-50);
     transition: height 0.3s ease-out;
   }
