adjust product info height on product page, fix hiding/showing credits and tabs

--- a/Sparc2/Sparc2/Catalog/ProductInfo.razor.css
+++ b/Sparc2/Sparc2/Catalog/ProductInfo.razor.css
@@ -218,6 +218,12 @@
   .product-info.product-page.fullscreen .info-container {
     height: 100%;
   }
+  .product-info.product-page.fullscreen .credits {
+    display: flex !important;
+  }
+  .product-info.product-page.fullscreen ::deep .product-actions {
+    display: block;
+  }
   .product-info.product-page.fullscreen .gradient-overlay {
     display: none;
   }
