--- a/Sparc2/Sparc2/Catalog/ProductInfo.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductInfo.razor.scss
@@ -278,6 +278,14 @@
                     height: 100%;
                 }
 
+                .credits {
+                    display: flex !important;
+                }
+
+                ::deep .product-actions {
+                    display: block;
+                }
+
                 .gradient-overlay {
                     display: none;
                 }
@@ -355,7 +363,6 @@
                 height: 32px;
                 position: absolute;
                 bottom: 16px;
-                
             }
 
             .more-btn {
