Enhance navigation styles and streamline authentication
- Added `font-size: 18px` to `.account-btn` in CSS files for improved visual appearance.
- Updated `LoginAsync` method in `SparcAuthenticator.cs` to ensure correct user session handling by modifying the order of operations.
- Simplified `SaveAsync` method by removing redundant user update call.
- Renamed `UpdateFromHttpContextAsync` to `UpdateFromHttpContext` and changed its implementation to synchronous.
- Introduced a new `Map` method for better organization of authentication routes.

--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -44,6 +44,7 @@ nav .right .menu-pages {
 nav .right .account-btn {
   display: flex;
   align-items: center;
+  font-size: 18px;
   /*gap: 8px;*/
 }
 nav .right .account-btn ::deep svg path {
