--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -52,6 +52,7 @@
         .account-btn {
             display: flex;
             align-items: center;
+            font-size: 18px;
             /*gap: 8px;*/
 
             ::deep svg path {
