--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -28,7 +28,7 @@
     <script src="js/catalog.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
-    <script src="https://localhost:7185/SparcAuthenticator.js"></script>
+    <script src="https://engine.sparc.coop/SparcAuthenticator.js"></script>
     <script>
         // use a script tag or an external JS file
         document.addEventListener("DOMContentLoaded", (event) => {
@@ -37,6 +37,6 @@
         });
 
     </script>
-    <script type="module" src="https://localhost:7185/tovik.js"></script>
+    <script type="module" src="https://engine.sparc.coop/tovik.js"></script>
 </body>
 </html>
