Sparc.Store building

--- a/Sparc2/Sparc2/Catalog/AddProduct.razor
+++ b/Sparc2/Sparc2/Catalog/AddProduct.razor
@@ -346,7 +346,7 @@ else if (CurrentStep == 1 && string.IsNullOrEmpty(_clientSecret))
                 customerId = CurrentUser.Id;
             }
 
-            CreateOrderPaymentRequest request = new(
+            Sparc.Blossom.Billing.CreateOrderPaymentRequest request = new(
                 amountInCents,
                 SelectedCurrency,
                 customerId,
