--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <base href="/" />
     <link rel="stylesheet" href="@Assets["css/app.css"]" />
-    <link rel="stylesheet" href="@Assets["Sparc2.styles.css"]" />
+    <link rel="stylesheet" href="@Assets["Sparc.Store.styles.css"]" />
     <link rel="icon" href="images/Logo.svg" sizes="any" type="image/svg+xml" />
     <link rel="stylesheet" href="https://use.typekit.net/mur1cay.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
