--- a/Sparc2/Sparc2/_Imports.razor
+++ b/Sparc2/Sparc2/_Imports.razor
@@ -7,15 +7,14 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 
-@using Sparc2
-@using Sparc2.Shared
-@using Sparc2.Shared.Icons
-@using Sparc2.Shared.Components
-@using Sparc2.Donations
-@using Sparc2.Ideas
-@using Sparc2.Profile
-@using Sparc2.Products
-@using Sparc2.Catalog.Purchase
+@using Sparc.Store
+@using Sparc.Store.Shared
+@using Sparc.Store.Shared.Icons
+@using Sparc.Store.Shared.Components
+@using Sparc.Store.Donations
+@using Sparc.Store.Ideas
+@using Sparc.Store.Products
+@using Sparc.Store.Catalog.Purchase
 @using Sparc.Blossom.Api
 @using Sparc.Blossom.Billing
 @using Idea = Sparc.Blossom.Api.ProjectIdea
