--- a/Sparc2/Sparc2/Catalog/ProductPurchase.razor.css
+++ b/Sparc2/Sparc2/Catalog/ProductPurchase.razor.css
@@ -11,9 +11,8 @@
 }
 .product-purchase form h5 {
   font-size: 2.133rem;
-  font-style: normal;
   font-weight: 500;
-  line-height: 110%; /* 23.463px */
+  line-height: 110%;
 }
 .product-purchase form section {
   display: flex;
@@ -25,56 +24,36 @@
   flex-direction: column;
   gap: 16px;
 }
-.product-purchase form section .form-group {
+.product-purchase form .form-group {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 16px;
 }
-.product-purchase form section label {
-  width: 100%;
-}
-.product-purchase form section:nth-child(1) label {
-  width: calc(100% - 64px);
-  display: flex;
-  padding: 32px;
-  align-items: center;
-  gap: 12px;
-  align-self: stretch;
-  border-radius: 16px;
-  border: 1px solid var(--Color-Purple-500, #6A2FD0);
-  /* Shadow */
-  box-shadow: 0px 0px 2px 0px rgba(26, 12, 50, 0.1), 0px 0px 4px 0px rgba(26, 12, 50, 0.2);
-}
-.product-purchase form section:nth-child(1) label span {
-  font-size: 2.133rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 110%; /* 23.463px */
-}
-.product-purchase form section:nth-child(2) label {
+.product-purchase form label {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  width: 100%;
 }
-.product-purchase form section:nth-child(2) label span {
+.product-purchase form label span {
   font-size: 1.2rem;
-  font-style: normal;
   font-weight: 500;
-  line-height: 140%; /* 16.8px */
+  line-height: 140%;
   letter-spacing: -0.12px;
 }
-.product-purchase form section:nth-child(2) label input[type=text], .product-purchase form section:nth-child(2) label input[type=email], .product-purchase form section:nth-child(2) label input[type=tel], .product-purchase form section:nth-child(2) label input[type=password] {
-  display: flex;
+.product-purchase form label input {
   padding: 16px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 10px;
   border-radius: 26px;
   border: 1px solid var(--purple-100);
   opacity: 0.5;
+}
+.product-purchase form .btn {
+  padding: 8px 16px;
+  border-radius: 100px;
+  width: 256px;
+  font-weight: 500;
 }
 @media only screen and (max-width: 766px) {
   .product-purchase {
