--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -33,9 +33,7 @@
                     <hr />
                     <div class="menu-profile">
                         <h5>Profile</h5>
-                        <div class="account-btn">
-                            Hi, @User.Identity?.Name.
-                        </div>
+                        <ProfileCircle />    
                     </div>
                 </div>
             </div>
