--- a/Sparc2/Sparc2/Catalog/ProductInfo.razor
+++ b/Sparc2/Sparc2/Catalog/ProductInfo.razor
@@ -1,4 +1,6 @@
-﻿<div class="product-info @PageClass(PageType) @(showFullDescription ? "fullscreen" : "")">
+﻿@using Markdig
+
+<div class="product-info @PageClass(PageType) @(showFullDescription ? "fullscreen" : "")">
     <div class="info-container">
         <header>
             <div>
@@ -15,20 +17,26 @@
                 }
             </div>
         </header>
-        <section class="description">
-            <p>@ActiveProduct.Description</p>
-        </section>
-        <section class="credits">
-            <h3><button @onclick=ToggleCredits>Credits <span class="@creditsClass">+</span></button></h3>
+
+        @if (ActiveProduct.Description != null)
+        {
+            <section class="description">
+                @((MarkupString)(Markdown.ToHtml(ActiveProduct.Description)))
+            </section>
+        }
+
+        @if (ActiveProduct.Credits.Any())
+        {
+            <section class="credits">
+                <h3><button @onclick=ToggleCredits>Credits <span class="@creditsClass">+</span></button></h3>
             <div class="@creditsClass">
-                <p>Vitae pellentesque | Position Title</p>
-                <p>Sem placerat | Position Title</p>
-                <p>Accumsan maecenas | Position Title</p>
-                <p>Vestibulum fusce | Position Title</p>
-                <p>Dictum risus | Position Title</p>
-                <p>Suspendisse aliquet | Position Title</p>
+                @foreach (var credit in ActiveProduct.Credits)
+                {
+                    <p>@credit.Name | @credit.Title</p>
+                }
             </div>
         </section>
+        }
         @if (PageType == "Product")
         {
             <footer>
@@ -78,7 +86,7 @@
         var color = tag switch
         {
             "development" => "purple",
-            "testing" => "orange",
+            "category" => "orange",
             "gift" => "gradient",
             "archived" => "grey",
             "owned" => "blue",
