--- a/Sparc2/Sparc2/Html.scss
+++ b/Sparc2/Sparc2/Html.scss
@@ -297,6 +297,49 @@ ul {
     display: none;
 }
 
+.description {
+    font-size: 16px;
+
+    h1, h2, h3 {
+        font-family: 'Fjalla One';
+        font-weight: 600;
+        margin: 36px 0 24px;
+        color: var(--Color-Purple-900, #1A0C32);
+    }
+
+    h1 {
+        font-size: 36px;
+        margin-top: 16px;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+
+    h3 {
+        font-size: 24px;
+    }
+
+    li {
+        margin-bottom: 10px;
+    }
+
+    ul {
+        list-style-type: disc;
+        padding-left: 36px;
+    }
+
+    p {
+        font-family: "elza-text", sans-serif;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 140%; /* 22.4px */
+        color: var(--Color-Purple-900, #1A0C32);
+        margin-bottom: 24px;
+    }
+}
+
 // FONTS
 
 /*font-family: elza-text, sans-serif;
