--- a/Sparc2/Sparc2/Catalog/ProductPage.razor
+++ b/Sparc2/Sparc2/Catalog/ProductPage.razor
@@ -29,9 +29,10 @@
                             </figure>
                         }
                     }
-                } else
+                } 
+                else
                 {
-                    <ProductPurchase ActiveProduct="ActiveProduct" />
+                    <Sparc.Store.Billing.ProductPurchase ActiveProduct="ActiveProduct" />
                 }
             </div>
         </div>
