--- a/Sparc2/Sparc2/_Imports.razor
+++ b/Sparc2/Sparc2/_Imports.razor
@@ -14,7 +14,7 @@
 @using Sparc.Store.Donations
 @using Sparc.Store.Ideas
 @using Sparc.Store.Products
-@using Sparc.Store.Catalog.Purchase
+@using Sparc.Store.Billing
 @using Sparc.Blossom.Api
 @using Sparc.Blossom.Billing
 @using Idea = Sparc.Blossom.Api.ProjectIdea
